--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,66 @@ body {
     overflow-y: auto; /* Ensure the body can scroll */
 }
 
+.initial-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background: url('https://raw.githubusercontent.com/skipzenni/undangan-digital/main/public/assets/Berdua2.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+.initial-content {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.initial-header h2 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 2em;
+    color: #b89167;
+    margin: 10px 0;
+}
+
+.initial-header h1 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 3em;
+    color: #b89167;
+    margin: 10px 0;
+}
+
+.initial-image {
+    margin: 20px 0;
+}
+
+.initial-photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: url('https://raw.githubusercontent.com/skipzenni/undangan-digital/main/public/assets/Berdua2.jpg') no-repeat center center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.initial-details p {
+    color: #b89167;
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.btn-primary {
+    background-color: #b89167;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: #fff;
+}
+
+
 .page-container {
     max-width: 500px;
     width: 100%;
